projects/compiler/test/typechecker/assignment/variable_error_immutable.out
Error at %FILE_NAME%:2:1
Cannot assign to variable 'a'
  |  a = 2
     ^
'a' is declared as immutable
